<resources>
    <string name="app_name">History &amp; Cache Cleaner</string>
    <string name="app_cache_cleaner_text">App Cache Cleaner </string>
    <string name="developer_name">Created by Sudo Ajay</string>
    <string name="notifications_group_service">Service control</string>
    <string name="firebase_channel_id">Push Notification</string>
    <string name="dark_mode_trans_text">Dark Mode</string>
    <string name="off_trans_text">Off</string>
    <string name="on_trans_text">On</string>
    <string name="automatic_at_sunset_trans_text">Automatic at sunset</string>
    <string name="set_by_battery_saver_trans_text">Set by battery saver</string>
    <string name="system_default_trans_text">System Default</string>
    <string name="successfully_cache_data_is_deleted_text">Successfully Cache Data Is Deleted</string>
    <string name="search_optionMenu">Search</string>
    <string name="darkMode_optionMenu">Dark Mode</string>
    <string name="setting_optionMenu">Setting</string>
    <string name="filterList_optionMenu">Filter List</string>
    <string name="selectOption_optionMenu">Select Option</string>
    <string name="feedbackEditTextHint">Please write your feedback</string>
    <string name="feedbackEditTextError">Please write something in feedback</string>
    <string name="systemInfo_text">Your System Info will be send to our developer team</string>
    <string name="add_screenshot_text">+ Add Screenshot</string>
    <string name="ok_text">OK</string>
    <string name="wifi_text">Wifi</string>
    <string name="mobile_data_text">Mobile Data</string>
    <string name="vpn_text">Vpn</string>
    <string name="no_internet_text">No Internet</string>
    <string name="system_info_text"> System Info </string>
    <string name="device_text">Device : </string>
    <string name="os_api_level_text">Os Api Level : </string>
    <string name="app_version_text">App Version : </string>
    <string name="language_text">Language : </string>
    <string name="total_memory_text">Total Heap Memory : </string>
    <string name="free_memory_text">Free Heap Memory : </string>
    <string name="screen_Text">Screen Size : </string>
    <string name="network_type_text">Network Type : </string>
    <string name="app_setting_text">App Setting</string>
    <string name="auto_clean_interval_text">Auto Clean Interval</string>
    <string name="system_setting_text">System Settings</string>
    <string name="use_dark_mode_text">Use Dark Mode</string>
    <string name="change_language_text">Change Language</string>
    <string name="clear_cache_text">Clear Cache</string>
    <string name="help_support_text">Help &amp; Support</string>
    <string name="report_a_bug_text">Report A Bug</string>
    <string name="report_a_bug_summary_text">submit an issue on Github issue page</string>
    <string name="send_feedback_text">Send Feedback</string>
    <string name="send_feedback_summary_text">submit feedback to fix the app bug</string>
    <string name="more_info_text">More Info</string>
    <string name="share_app_text">Share App</string>
    <string name="rate_use_text">Rate-Us</string>
    <string name="more_app_text">More App</string>
    <string name="about_app_text">About App</string>
    <string name="share_app_summary_text">share the play store app link</string>
    <string name="rate_use_summary_text">express your experience through rating</string>
    <string name="more_app_summary_text">there is more app out there</string>
    <string name="clear_cache_summary_text">clear app cache and code cache from phone</string>
    <string name="share_apk_text">Share Apk </string>
    <string name="share_apk_message_text">Here you go - %1$s Apk</string>
    <string name="action_applicationSetting">Application Setting</string>
    <string name="action_openAppInGooglePlayStore">Open app in Google Play Store</string>
    <string name="version_name_text">Version Name</string>
    <string name="version_code_text">Version Code</string>
    <string name="first_install_text">First Install</string>
    <string name="last_Update_text">Last Update</string>
    <string name="package_name_text">Package Name</string>
    <string name="apk_path_text">Apk Path</string>
    <string name="data_path_text">Data Path</string>
    <string name="apk_size_text">Apk Size</string>
    <string name="min_sdk_text">Min Sdk</string>
    <string name="target_sdk_text">Target Sdk</string>
    <string name="installer_text">Installer</string>
    <string name="permission_text">Permission</string>
    <string name="unspecified_text">Unspecified</string>
    <string name="alert_dialog_title_no_root_permission">No Rooted App</string>
    <string name="alert_dialog_message_no_root_permission">Root access is required in order to remove internal cache dir which we only see with root </string>
    <string name="alert_dialog_title_be_root">Root Access Denied</string>
    <string name="alert_dialog_message_be_root">Root access is installed on your device, but
        to remove internal cache dir, you have to grant root access for this app from your root manager app.</string>
    <string name="alert_dialog_title_have_root">Root Access Obtained!</string>
    <string name="alert_dialog_message_have_root">Root access is properly installed on this device.</string>
    <string name="alert_dialog_no_app_selected_title">There are no app selected!</string>
    <string name="alert_dialog_no_item_selected_title">There are no item selected!</string>
    <string name="alert_dialog_no_cache_app">There are no app for cache cleaner</string>
    <string name="filter_option_text">Filter Option</string>
    <string name="title_menu_show">Show</string>
    <string name="title_menu_order_by_trans">Order by</string>
    <string name="menu_alphabetical_order_trans">Alphabetical order</string>
    <string name="menu_installation_date_trans">Installation date</string>
    <string name="menu_cache_size_trans">Cache size</string>
    <string name="menu_system_app_trans">System app</string>
    <string name="menu_user_app_trans">User app</string>
    <string name="title_menu_select_option_trans">Select Option</string>
    <string name="menu_all_apps_trans">All apps</string>
    <string name="menu_no_apps_trans">No apps</string>
    <string name="menu_only_system_apps_trans">Only system apps</string>
    <string name="menu_only_user_apps_trans">Only user apps</string>
    <string name="selectSdCardMes">Only Select the Sd Card Directory</string>
    <string name="wrongDirectorySelected">You select the wrong directory</string>
    <string name="supportAboveSdCard">Sorry , We don\'t support sd card at this android version </string>
    <string name="we_detect_sd_card_text">We have detected sd card</string>
    <string name="sd_card_storage_alert_dialog_title_text">Sd Card Present ?</string>
    <string name="sd_card_storage_alert_dialog_message_text">If Sd Card available at you device then select sd card otherwise cancel this dialog</string>
    <string name="yes_button_text">Yes</string>
    <string name="no_button_text">No</string>
    <string name="external_storage_alert_dialog_title_text">App Permission</string>
    <string name="external_storage_alert_dialog_message_text">In Android 6+ App need permission for scanning and cleaning process.</string>
    <string name="readMoreButton">Read More</string>
    <string name="continueButton">Continue</string>
    <string name="reportIt">There is Error Please Report It</string>
    <string name="selectExternalMes">Only Select the Internal Card Directory</string>
    <string name="giveUsPermission">Give us permission for further process</string>
    <string name="more_option_text">Show Option</string>
    <string name="app_text">App</string>
    <string name="app_more_detail_text">More Detail</string>
    <string name="app_cache_file">Cache Path</string>
    <string name="alert_dialog_ask_permission_to_remove_apps_title">Unnecessary Data</string>
    <string name="alert_dialog_ask_permission_to_remove_apps_message">You are going to remove selected apps. It\'s an irreversible action, pay attention.</string>
    <string name="alert_dialog_ask_permission_to_remove_cache_item_message">You are going to remove unnecessary Data. It\'s an irreversible action, pay attention.</string>
    <string name="no_text">NO</string>
    <string name="yes_text">Yes</string>
    <string name="you_have_saved_app_cache_text">You Have Saved %s</string>
    <string name="you_have_saved_cache_item_text" >You Have Clear Unnecessary Data</string>
    <string name="shareMessage">Hey, check This App which helps you to Delete Duplicate and Unnecessary Data from the phone -</string>
    <string name="version_info_text">Version %s</string>
    <string name="update_message_text">The latest version is here</string>
    <string name="already_update_message_text">The latest version is already installed</string>
    <string name="open_source_project_text">Open Source Project</string>
    <string name="privacy_policy_text">Privacy Policy</string>
    <string name="apk_available_text">An update has just been downloaded.</string>
    <string name="update_failed_text">App Update failed, please try again on the next app launch.</string>
    <string name="all_app_cache_trans_text">Apps Cache</string>
    <string name="download_folder_trans_text" translatable="false">Download (Default Folder)</string>
    <string name="browser_default_only_trans_text">Browser (Default Only)</string>
    <string name="clipboard_trans_text">Clipboard</string>
    <string name="clipboard_title_text">Clipboard Text</string>
    <string name="empty_text">Empty !!</string>
    <string name="there_is_no_file_explorer_app_present_text">There is no file explorer app present </string>
    <string name="dark_mode_text" translatable="false">Dark Mode</string>
    <string name="is_dark_mode_text" translatable="false">isDarkMode</string>
    <string name="off_text" translatable="false">Off</string>
    <string name="on_text" translatable="false">On</string>
    <string name="automatic_at_sunset_text" translatable="false">Automatic at sunset</string>
    <string name="set_by_battery_saver_text" translatable="false">Set by battery saver</string>
    <string name="system_default_text" translatable="false">System Default</string>
    <string name="title_menu_order_by" translatable="false">Order by</string>
    <string name="menu_alphabetical_order" translatable="false">Alphabetical order</string>
    <string name="menu_installation_date" translatable="false">Installation date</string>
    <string name="menu_app_size" translatable="false">App size</string>
    <string name="menu_system_app" translatable="false">System apps</string>
    <string name="menu_user_app" translatable="false">User apps</string>
    <string name="title_menu_select_option" translatable="false">Select Option</string>
    <string name="menu_all_apps" translatable="false">All apps</string>
    <string name="menu_no_apps" translatable="false">No apps</string>
    <string name="menu_only_system_apps" translatable="false">Only system apps</string>
    <string name="menu_only_user_apps" translatable="false">Only user apps</string>
    <string name="menu_system_app_except_browser" translatable="false">System app except browser</string>
    <string name="menu_custom_app" translatable="false">Custom apps</string>
    <string name="filter_changes_text" translatable="false">filterChanges</string>
    <string name="is_root_permission_text" translatable="false">isRootPermission</string>
    <string name="at_least_one_item_text">You Can\'t Hide Both Item </string>
    <string name="external_path_text" translatable="false">External Path</string>
    <string name="external_uri_text" translatable="false">External Uri</string>
    <string name="sdCard_path_text" translatable="false">SdCard Path</string>
    <string name="sdCard_uri_text" translatable="false">SdCard Uri</string>
</resources>