<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/system_setting_text">
        <Preference
            app:key="useDarkTheme"
            app:title="@string/use_dark_mode_text" />

        <ListPreference
            android:defaultValue="en"
            android:entries="@array/languageList"
            android:entryValues="@array/languagesValues"
            android:key="changeLanguage"
            android:title="@string/change_language_text" />

        <Preference
            app:key="clearCache"
            app:title="@string/clear_cache_text" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/help_support_text">
        <Preference
            android:key="privacyPolicy"
            android:title="@string/privacy_policy_text" />
        <Preference
            android:key="sendFeedback"
            android:summary="@string/send_feedback_summary_text"
            android:title="@string/send_feedback_text" />
        <Preference
            android:key="reportABug"
            android:summary="@string/report_a_bug_summary_text"
            android:title="@string/report_a_bug_text" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/more_info_text">
        <Preference
            android:key="shareApp"
            android:summary="@string/share_app_summary_text"
            android:title="@string/share_app_text" />
        <Preference
            android:key="rateUs"
            android:summary="@string/rate_use_summary_text"
            android:title="@string/rate_use_text" />
        <Preference
            android:key="moreApp"
            android:summary="@string/more_app_summary_text"
            android:title="@string/more_app_text" />
        <Preference
            android:key="aboutApp"
            android:summary="@string/about_app_summary_text"
            android:title="@string/about_app_text" />

    </PreferenceCategory>

</PreferenceScreen>
