<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="activity"
            type="com.sudoajay.historycachecleaner.activity.aboutAppActivity.AboutApp" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/mainBgColor"
        tools:context="com.sudoajay.historycachecleaner.activity.aboutAppActivity.AboutApp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_collapseMode="pin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteX="16dp">

                <ImageView
                    android:id="@+id/appInfo_imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_info"
                    app:tint="?attr/boxTextColor"
                    tools:ignore="ContentDescription" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/appName_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/app_name"
            android:textColor="?attr/headingNormalTextColor"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintVertical_bias="0.095" />

        <TextView
            android:id="@+id/versionInfo_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@{activity.getVersionCode()}"
            android:textColor="?attr/headingNormalTextColor"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/appName_textView"
            app:layout_constraintStart_toStartOf="@+id/appName_textView"
            app:layout_constraintTop_toBottomOf="@+id/appName_textView" />

        <TextView
            android:id="@+id/updateMessage_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/already_update_message_text"
            android:textColor="?attr/headingNormalTextColor"
            android:textSize="16sp"
            android:visibility="@{activity.hideProgress ? View.VISIBLE :View.GONE }"
            app:layout_constraintEnd_toEndOf="@+id/versionInfo_textView"
            app:layout_constraintStart_toStartOf="@+id/versionInfo_textView"
            app:layout_constraintTop_toBottomOf="@+id/versionInfo_textView" />


        <Button
            android:id="@+id/privacyPolicy_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/about_background_button"
            android:ellipsize="end"
            android:maxLines="1"
            android:onClick="@{() ->activity.openPrivacyPolicy()}"
            android:text="@string/privacy_policy_text"
            android:textAllCaps="false"
            android:textColor="?attr/headingNormalTextColor"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toTopOf="@+id/openSourceProject_button"
            app:layout_constraintEnd_toEndOf="@+id/openSourceProject_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/openSourceProject_button" />

        <Button
            android:id="@+id/openSourceProject_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="28dp"
            android:background="@drawable/about_background_button"
            android:ellipsize="end"
            android:maxLines="1"
            android:onClick="@{() ->activity.openGithub()}"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/open_source_project_text"
            android:textAllCaps="false"
            android:textColor="?attr/headingNormalTextColor"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="@{activity.hideProgress ? View.GONE :View.VISIBLE }"
            app:layout_constraintEnd_toEndOf="@+id/versionInfo_textView"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintStart_toStartOf="@+id/versionInfo_textView"
            app:layout_constraintTop_toBottomOf="@+id/versionInfo_textView" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>